feat: implementa componente de toast

--- a/src/globals.css
+++ b/src/globals.css
@@ -26,4 +26,10 @@
     box-shadow: none !important;
     border-color: transparent;
   }
+
+  .transition-all {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+  }
 }
