--- a/src/commons/components/LoadingSpinner.css
+++ b/src/commons/components/LoadingSpinner.css
@@ -1,11 +1,25 @@
 .loading-spinner {
-    width: 100px;
-    height: 100px;
-    border: calc(100px / 10) solid #D9D9D9;
+   --loading-spinner-size: 100px;
+
+    width: var(--loading-spinner-size);
+    height: var(--loading-spinner-size);
+    border: calc(var(--loading-spinner-size) / 7) solid #D9D9D9;
     border-radius: 50%;
     box-sizing: border-box;
     border-top-color: #7fb5e9;
     animation: loading 0.75s ease infinite; 
+}
+
+.loading-spinner--small {
+    --loading-spinner-size: 30px;
+}
+
+.loading-spinner--medium {
+    --loading-spinner-size: 100px;
+}
+
+.loading-spinner--large {
+    --loading-spinner-size: 300px;
 }
 
 @keyframes loading {
